# src/configs/swagger.json
@@ -502,6 +502,62 @@
         }
       }
     },
+    "/blogs/{id}/like": {
+      "patch": {
+        "tags": [
+          "Blogs"
+        ],
+        "summary": "Like Blog",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/blogs/{id}/unlike": {
+      "patch": {
+        "tags": [
+          "Blogs"
+        ],
+        "summary": "UnLike Blog",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/categories/": {
       "get": {
         "tags": [
@@ -994,6 +1050,21 @@
             "default": {
               "type": "boolean",
               "example": true
+            }
+          }
+        },
+        "comments": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "type": {
+                "type": "function"
+              },
+              "ref": {
+                "type": "string",
+                "example": "Comment"
+              }
             }
           }
         },
